[package]
name = "npmjs-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
node-semver = "2.0"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
